[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/StateMachine/GolemBossEnemy/AttackState.gd" type="Script" id=1]

[node name="AttackState" type="Node"]
script = ExtResource( 1 )

[node name="DamageTakenTimer" type="Timer" parent="."]

[node name="PatternCooldownTimer" type="Timer" parent="."]
